# menucli

./: Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: main.rs  types.rs
src/ax/: app.rs  element.rs  errors.rs  mod.rs  permissions.rs
src/cli/: args.rs  mod.rs  output.rs
src/commands/: apps.rs  check_access.rs  click.rs  list.rs  mod.rs  search.rs  state.rs  toggle.rs
src/menu/: errors.rs  flatten.rs  mod.rs  resolve.rs  search.rs  shortcut.rs  tree.rs
